--- a/ChatCampUIKit/Views/ChatTableViewCell.xib
+++ b/ChatCampUIKit/Views/ChatTableViewCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChatTableViewCell" rowHeight="70" id="pi2-5s-ffl" customClass="ChatTableViewCell" customModule="ChatCamp_Demo" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ChatTableViewCell" rowHeight="70" id="pi2-5s-ffl" customClass="ChatTableViewCell" customModule="ChatCampUIKit" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="374" height="70"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pi2-5s-ffl" id="E8g-Cg-CRp">
@@ -34,7 +34,7 @@
                                 <color key="textColor" red="0.4549019608" green="0.49019607840000001" blue="0.54117647059999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="rAf-ma-RYb">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user_placeholder.png" translatesAutoresizingMaskIntoConstraints="NO" id="rAf-ma-RYb">
                                 <rect key="frame" x="16" y="10.5" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="1Mr-WZ-RYg"/>
@@ -106,6 +106,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="user_placeholder" width="50" height="50"/>
+        <image name="user_placeholder.png" width="50" height="50"/>
     </resources>
 </document>
