--- a/ChatCampUIKit/Views/LoadingDots.xib
+++ b/ChatCampUIKit/Views/LoadingDots.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,11 +13,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="LoadingDots" customModule="ChatCamp_Demo" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="LoadingDots" customModule="ChatCampUIKit" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="107" height="31"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Dot25%" translatesAutoresizingMaskIntoConstraints="NO" id="a3o-e3-BCA">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Dot25%.png" translatesAutoresizingMaskIntoConstraints="NO" id="a3o-e3-BCA">
                     <rect key="frame" x="5" y="10" width="10" height="10"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -25,7 +25,7 @@
                         <constraint firstAttribute="width" constant="10" id="JmO-mk-yhI"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Dot50%" translatesAutoresizingMaskIntoConstraints="NO" id="nw0-b5-NWL">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Dot50%.png" translatesAutoresizingMaskIntoConstraints="NO" id="nw0-b5-NWL">
                     <rect key="frame" x="20" y="10.5" width="10" height="10"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -33,7 +33,7 @@
                         <constraint firstAttribute="width" constant="10" id="Tdt-a6-ESl"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Dot100%" translatesAutoresizingMaskIntoConstraints="NO" id="0eR-Xv-YvH">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Dot100%.png" translatesAutoresizingMaskIntoConstraints="NO" id="0eR-Xv-YvH">
                     <rect key="frame" x="35" y="10.5" width="10" height="10"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -62,8 +62,8 @@
         </view>
     </objects>
     <resources>
-        <image name="Dot100%" width="8" height="8"/>
-        <image name="Dot25%" width="8" height="8"/>
-        <image name="Dot50%" width="8" height="8"/>
+        <image name="Dot100%.png" width="24" height="24"/>
+        <image name="Dot25%.png" width="24" height="24"/>
+        <image name="Dot50%.png" width="24" height="24"/>
     </resources>
 </document>
