add message time, enhance typing indicator

--- a/ChatCampUIKit/Views/LoadingDots.xib
+++ b/ChatCampUIKit/Views/LoadingDots.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -42,7 +42,7 @@
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="0eR-Xv-YvH" firstAttribute="centerY" secondItem="nw0-b5-NWL" secondAttribute="centerY" id="3FO-x6-BqY"/>
                 <constraint firstItem="nw0-b5-NWL" firstAttribute="centerY" secondItem="a3o-e3-BCA" secondAttribute="centerY" id="5FC-zS-nfT"/>
