--- a/ChatCampUIKit/Views/LoadingDots.xib
+++ b/ChatCampUIKit/Views/LoadingDots.xib
@@ -6,8 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -44,10 +42,10 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="a3o-e3-BCA" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="2G6-pI-Acq"/>
                 <constraint firstItem="0eR-Xv-YvH" firstAttribute="centerY" secondItem="nw0-b5-NWL" secondAttribute="centerY" id="3FO-x6-BqY"/>
                 <constraint firstItem="nw0-b5-NWL" firstAttribute="centerY" secondItem="a3o-e3-BCA" secondAttribute="centerY" id="5FC-zS-nfT"/>
                 <constraint firstItem="nw0-b5-NWL" firstAttribute="leading" secondItem="a3o-e3-BCA" secondAttribute="trailing" constant="5" id="K5R-u2-Fdb"/>
-                <constraint firstItem="a3o-e3-BCA" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerYWithinMargins" id="YS4-9M-8Ng"/>
                 <constraint firstItem="a3o-e3-BCA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="5" id="bp4-Rm-Et2"/>
                 <constraint firstItem="0eR-Xv-YvH" firstAttribute="leading" secondItem="nw0-b5-NWL" secondAttribute="trailing" constant="5" id="fdJ-HI-jrj"/>
             </constraints>
