--- a/ChatCampUIKit/MessageKit/Views/Cells/DocumentView.xib
+++ b/ChatCampUIKit/MessageKit/Views/Cells/DocumentView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,19 +12,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="DocumentView" customModule="ChatCamp_Demo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="86"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="DocumentView" customModule="ChatCampUIKit" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="304" height="62"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="file" translatesAutoresizingMaskIntoConstraints="NO" id="dgm-r2-jcM">
-                    <rect key="frame" x="8" y="28" width="30" height="30"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="file.png" translatesAutoresizingMaskIntoConstraints="NO" id="dgm-r2-jcM">
+                    <rect key="frame" x="8" y="16" width="30" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="Krg-Gy-tef"/>
                         <constraint firstAttribute="width" constant="30" id="wIv-v1-VBe"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KbV-LQ-FEp">
-                    <rect key="frame" x="46" y="32.5" width="313" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KbV-LQ-FEp">
+                    <rect key="frame" x="46" y="20.5" width="250" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" relation="lessThanOrEqual" constant="250" id="XGB-KE-Bmg"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -36,17 +39,17 @@
                 <constraint firstItem="KbV-LQ-FEp" firstAttribute="leading" secondItem="dgm-r2-jcM" secondAttribute="trailing" constant="8" id="KZa-JV-ql8"/>
                 <constraint firstItem="KbV-LQ-FEp" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="OzD-Ui-vdD"/>
                 <constraint firstItem="dgm-r2-jcM" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="hW6-da-Neg"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="KbV-LQ-FEp" secondAttribute="trailing" constant="16" id="vLJ-Bf-psM"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="KbV-LQ-FEp" secondAttribute="trailing" constant="8" id="vLJ-Bf-psM"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="documentNameLabel" destination="KbV-LQ-FEp" id="Zd9-oQ-J07"/>
             </connections>
-            <point key="canvasLocation" x="14.5" y="109"/>
+            <point key="canvasLocation" x="65" y="90"/>
         </view>
     </objects>
     <resources>
-        <image name="file" width="30" height="30"/>
+        <image name="file.png" width="30" height="30"/>
     </resources>
 </document>
