--- a/ChatCampUIKit/Storyboards/CreateChannel.storyboard
+++ b/ChatCampUIKit/Storyboards/CreateChannel.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,7 +13,7 @@
         <!--Create Channel-->
         <scene sceneID="fMb-b7-iU2">
             <objects>
-                <viewController storyboardIdentifier="CreateChannelViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="5PJ-Yk-TSE" customClass="CreateChannelViewController" customModule="ChatCamp_Demo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CreateChannelViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="5PJ-Yk-TSE" customClass="CreateChannelViewController" customModule="ChatCampUIKit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7g0-Mq-vXd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -60,6 +60,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="channelNameTextField" destination="1S7-EV-aKp" id="5pw-E5-rUb"/>
+                        <outlet property="channelNameTextFieldHightConstraint" destination="0Tk-T2-fOh" id="I64-Td-wu6"/>
                         <outlet property="creatButton" destination="9Po-66-in2" id="NhZ-PF-Scg"/>
                         <outlet property="tableView" destination="NUc-LW-J4y" id="b74-58-iIX"/>
                     </connections>
